src/parser.output
Terminals unused in grammar

    ME
    POINT_X
    POINT_Y
    IMG_DIMS
    IMG_DRAWS
    FUNC
    COLOUR
    RED
    BLUE
    GREEN


State 120 conflicts: 1 shift/reduce
State 148 conflicts: 2 shift/reduce
State 220 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | translation_unit

    3 translation_unit: external_declaration
    4                 | translation_unit external_declaration

    5 external_declaration: driver_definition
    6                     | function_definition
    7                     | variable_declaration
    8                     | class_declaration

    9 driver_definition: DRIVER '(' ')' compound_statement

   10 type: INT
   11     | FLOAT
   12     | STRING
   13     | BOOL
   14     | VOID
   15     | POINT
   16     | IMAGE
   17     | RECTANGLE
   18     | CIRCLE
   19     | ELLIPSE
   20     | POLYGON
   21     | CURVE
   22     | PATH

   23 literal: INTEGER_LITERAL
   24        | FLOAT_LITERAL
   25        | STRING_LITERAL
   26        | BOOL_LITERAL
   27        | PI

   28 variable_declaration: VAR type variable_list ';'
   29                     | CONST type variable_list ';'

   30 variable_declaration_list: variable_declaration
   31                          | variable_declaration_list variable_declaration

   32 variable_list: variable
   33              | variable_list ',' variable

   34 variable: IDENTIFIER ';'
   35         | IDENTIFIER ASSIGN expression

   36 function_definition: type IDENTIFIER '(' args_list ')' compound_statement
   37                    | type IDENTIFIER '(' ')' compound_statement

   38 args_list: arg
   39          | args_list ',' arg

   40 arg: VAR type IDENTIFIER
   41    | CONST type IDENTIFIER

   42 class_declaration: FAMILY IDENTIFIER class_definition ';'
   43                  | FAMILY IDENTIFIER INHERITS IDENTIFIER class_definition ';'
   44                  | FAMILY IDENTIFIER INHERITS access_specifier class_definition ';'

   45 access_specifier: PUBLIC
   46                 | PRIVATE

   47 class_definition: '{' '}'
   48                 | '{' class_members '}'

   49 class_members: class_members access_specifier class_member
   50              | class_members class_member
   51              | access_specifier class_member
   52              | class_member

   53 class_member: variable_declaration
   54             | function_definition
   55             | constructor_declaration

   56 constructor_declaration: IDENTIFIER '(' ')' compound_statement
   57                        | IDENTIFIER '(' args_list ')' compound_statement

   58 object_declaration: VAR IDENTIFIER IDENTIFIER ';'
   59                   | VAR IDENTIFIER IDENTIFIER '(' ')'
   60                   | VAR IDENTIFIER IDENTIFIER '(' expression ')'

   61 primary_expression: IDENTIFIER
   62                   | literal
   63                   | '(' expression ')'

   64 unary_expression: primary_expression
   65                 | unary_expression '[' expression ']'
   66                 | unary_expression '(' ')'
   67                 | unary_expression '(' expression ')'
   68                 | unary_expression SCOPE_ACCESS IDENTIFIER
   69                 | unary_expression SCOPE_ACCESS IDENTIFIER '(' ')'
   70                 | unary_expression SCOPE_ACCESS IDENTIFIER '(' expression ')'
   71                 | inbuilt_function_call

   72 multiplicative_expression: unary_expression
   73                          | multiplicative_expression '*' unary_expression
   74                          | multiplicative_expression '/' unary_expression
   75                          | multiplicative_expression '%' unary_expression

   76 additive_expression: multiplicative_expression
   77                    | additive_expression '+' multiplicative_expression
   78                    | additive_expression '-' multiplicative_expression

   79 relational_expression: additive_expression
   80                      | relational_expression LS_THAN additive_expression
   81                      | relational_expression GR_THAN additive_expression
   82                      | relational_expression LS_THAN_EQ additive_expression
   83                      | relational_expression GR_THAN_EQ additive_expression

   84 equality_expression: relational_expression
   85                    | equality_expression EQ relational_expression
   86                    | equality_expression NOT_EQ relational_expression

   87 logical_not_expression: equality_expression
   88                       | LOGICAL_NOT equality_expression

   89 logical_and_expression: logical_not_expression
   90                       | logical_and_expression LOGICAL_AND logical_not_expression

   91 logical_or_expression: logical_and_expression
   92                      | logical_or_expression LOGICAL_OR logical_and_expression

   93 conditional_expression: logical_or_expression
   94                       | logical_or_expression '?' expression ':' conditional_expression

   95 assignment_expression: conditional_expression
   96                      | unary_expression assignment_operator assignment_expression

   97 assignment_operator: ASSIGN
   98                    | MUL_ASSIGN
   99                    | DIV_ASSIGN
  100                    | MOD_ASSIGN
  101                    | ADD_ASSIGN
  102                    | SUB_ASSIGN

  103 expression: assignment_expression
  104           | expression ',' assignment_expression

  105 constant_expression: conditional_expression

  106 statement: labeled_statement
  107          | compound_statement
  108          | expression_statement
  109          | selection_statement
  110          | iteration_statement
  111          | jump_statement
  112          | variable_declaration_list
  113          | object_declaration

  114 compound_statement: '{' '}'
  115                   | '{' statement_list '}'

  116 statement_list: statement
  117               | statement_list statement

  118 expression_statement: ';'
  119                     | expression ';'

  120 selection_statement: IF '(' expression ')' compound_statement
  121                    | IF '(' expression ')' compound_statement ELSE compound_statement
  122                    | SWITCH '(' expression ')' statement

  123 labeled_statement: IDENTIFIER ':' statement
  124                  | CASE constant_expression ':' statement
  125                  | DEFAULT ':' statement

  126 iteration_statement: WHILE '(' expression ')' statement
  127                    | FOR '(' expression_statement expression_statement ')' statement
  128                    | FOR '(' expression_statement expression_statement expression ')' statement
  129                    | FOR '(' variable_declaration expression_statement ')' statement
  130                    | FOR '(' variable_declaration expression_statement expression ')' statement

  131 jump_statement: CONTINUE ';'
  132               | BREAK ';'
  133               | SEND expression_statement

  134 inbuilt_function_call: inbuilt_function '(' ')'
  135                      | inbuilt_function '(' expression ')'
  136                      | inbuilt_member_function '(' ')'
  137                      | inbuilt_member_function '(' expression ')'

  138 inbuilt_function: CLEAR
  139                 | DRAW
  140                 | PRINT
  141                 | FLOOR
  142                 | CEIL
  143                 | TO_FLOAT
  144                 | ADD_POINT
  145                 | MAKE_POINT
  146                 | GET_COLOUR_FROM_RGB

  147 inbuilt_member_function: inbuilt_get_function
  148                        | inbuilt_set_function

  149 inbuilt_get_function: GET_X
  150                     | GET_Y
  151                     | GET_POINTS
  152                     | GET_WIDTH
  153                     | GET_CENTER
  154                     | GET_SIDES
  155                     | GET_SIDE_LENGTH
  156                     | GET_ROTATION
  157                     | GET_RADIUS
  158                     | GET_COLOUR
  159                     | GET_BORDER_COLOUR

  160 inbuilt_set_function: SET_X
  161                     | SET_Y
  162                     | SET_POINTS
  163                     | SET_WIDTH
  164                     | SET_LENGTH
  165                     | SET_CENTER
  166                     | SET_SIDES
  167                     | SET_SIDE_LENGTH
  168                     | SET_ROTATION
  169                     | SET_RADIUS
  170                     | SET_COLOUR
  171                     | SET_BORDER_COLOUR
  172                     | SET_DIMENSION


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 75
    '(' (40) 9 36 37 56 57 59 60 63 66 67 69 70 120 121 122 126 127 128 129 130 134 135 136 137
    ')' (41) 9 36 37 56 57 59 60 63 66 67 69 70 120 121 122 126 127 128 129 130 134 135 136 137
    '*' (42) 73
    '+' (43) 77
    ',' (44) 33 39 104
    '-' (45) 78
    '/' (47) 74
    ':' (58) 94 123 124 125
    ';' (59) 28 29 34 42 43 44 58 118 119 131 132
    '?' (63) 94
    '[' (91) 65
    ']' (93) 65
    '{' (123) 47 48 114 115
    '}' (125) 47 48 114 115
    error (256)
    IDENTIFIER (258) 34 35 36 37 40 41 42 43 44 56 57 58 59 60 61 68 69 70 123
    INTEGER_LITERAL (259) 23
    FLOAT_LITERAL (260) 24
    STRING_LITERAL (261) 25
    BOOL_LITERAL (262) 26
    PI (263) 27
    INT (264) 10
    FLOAT (265) 11
    STRING (266) 12
    BOOL (267) 13
    VOID (268) 14
    CONST (269) 29 41
    VAR (270) 28 40 58 59 60
    ASSIGN (271) 35 97
    MUL_ASSIGN (272) 98
    DIV_ASSIGN (273) 99
    MOD_ASSIGN (274) 100
    ADD_ASSIGN (275) 101
    SUB_ASSIGN (276) 102
    EQ (277) 85
    NOT_EQ (278) 86
    LS_THAN (279) 80
    LS_THAN_EQ (280) 82
    GR_THAN (281) 81
    GR_THAN_EQ (282) 83
    LOGICAL_AND (283) 90
    LOGICAL_OR (284) 92
    LOGICAL_NOT (285) 88
    IF (286) 120 121
    ELSE (287) 121
    FOR (288) 127 128 129 130
    WHILE (289) 126
    SWITCH (290) 122
    CASE (291) 124
    DEFAULT (292) 125
    BREAK (293) 132
    CONTINUE (294) 131
    SEND (295) 133
    FAMILY (296) 42 43 44
    ME (297)
    INHERITS (298) 43 44
    SCOPE_ACCESS (299) 68 69 70
    PUBLIC (300) 45
    PRIVATE (301) 46
    POINT (302) 15
    IMAGE (303) 16
    RECTANGLE (304) 17
    CIRCLE (305) 18
    ELLIPSE (306) 19
    POLYGON (307) 20
    CURVE (308) 21
    PATH (309) 22
    POINT_X (310)
    POINT_Y (311)
    IMG_DIMS (312)
    IMG_DRAWS (313)
    FUNC (314)
    CLEAR (315) 138
    DRAW (316) 139
    PRINT (317) 140
    FLOOR (318) 141
    CEIL (319) 142
    TO_FLOAT (320) 143
    ADD_POINT (321) 144
    MAKE_POINT (322) 145
    GET_X (323) 149
    GET_Y (324) 150
    GET_POINTS (325) 151
    GET_WIDTH (326) 152
    GET_CENTER (327) 153
    GET_SIDES (328) 154
    GET_SIDE_LENGTH (329) 155
    GET_ROTATION (330) 156
    GET_RADIUS (331) 157
    GET_COLOUR (332) 158
    GET_BORDER_COLOUR (333) 159
    SET_X (334) 160
    SET_Y (335) 161
    SET_POINTS (336) 162
    SET_WIDTH (337) 163
    SET_LENGTH (338) 164
    SET_CENTER (339) 165
    SET_SIDES (340) 166
    SET_SIDE_LENGTH (341) 167
    SET_ROTATION (342) 168
    SET_RADIUS (343) 169
    SET_COLOUR (344) 170
    SET_BORDER_COLOUR (345) 171
    SET_DIMENSION (346) 172
    COLOUR (347)
    RED (348)
    BLUE (349)
    GREEN (350)
    GET_COLOUR_FROM_RGB (351) 146
    DRIVER (352) 9


Nonterminals, with rules where they appear

    $accept (113)
        on left: 0
    program (114)
        on left: 1 2
        on right: 0
    translation_unit (115)
        on left: 3 4
        on right: 2 4
    external_declaration (116)
        on left: 5 6 7 8
        on right: 3 4
    driver_definition (117)
        on left: 9
        on right: 5
    type (118)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 28 29 36 37 40 41
    literal (119)
        on left: 23 24 25 26 27
        on right: 62
    variable_declaration (120)
        on left: 28 29
        on right: 7 30 31 53 129 130
    variable_declaration_list (121)
        on left: 30 31
        on right: 31 112
    variable_list (122)
        on left: 32 33
        on right: 28 29 33
    variable (123)
        on left: 34 35
        on right: 32 33
    function_definition (124)
        on left: 36 37
        on right: 6 54
    args_list (125)
        on left: 38 39
        on right: 36 39 57
    arg (126)
        on left: 40 41
        on right: 38 39
    class_declaration (127)
        on left: 42 43 44
        on right: 8
    access_specifier (128)
        on left: 45 46
        on right: 44 49 51
    class_definition (129)
        on left: 47 48
        on right: 42 43 44
    class_members (130)
        on left: 49 50 51 52
        on right: 48 49 50
    class_member (131)
        on left: 53 54 55
        on right: 49 50 51 52
    constructor_declaration (132)
        on left: 56 57
        on right: 55
    object_declaration (133)
        on left: 58 59 60
        on right: 113
    primary_expression (134)
        on left: 61 62 63
        on right: 64
    unary_expression (135)
        on left: 64 65 66 67 68 69 70 71
        on right: 65 66 67 68 69 70 72 73 74 75 96
    multiplicative_expression (136)
        on left: 72 73 74 75
        on right: 73 74 75 76 77 78
    additive_expression (137)
        on left: 76 77 78
        on right: 77 78 79 80 81 82 83
    relational_expression (138)
        on left: 79 80 81 82 83
        on right: 80 81 82 83 84 85 86
    equality_expression (139)
        on left: 84 85 86
        on right: 85 86 87 88
    logical_not_expression (140)
        on left: 87 88
        on right: 89 90
    logical_and_expression (141)
        on left: 89 90
        on right: 90 91 92
    logical_or_expression (142)
        on left: 91 92
        on right: 92 93 94
    conditional_expression (143)
        on left: 93 94
        on right: 94 95 105
    assignment_expression (144)
        on left: 95 96
        on right: 96 103 104
    assignment_operator (145)
        on left: 97 98 99 100 101 102
        on right: 96
    expression (146)
        on left: 103 104
        on right: 35 60 63 65 67 70 94 104 119 120 121 122 126 128 130 135 137
    constant_expression (147)
        on left: 105
        on right: 124
    statement (148)
        on left: 106 107 108 109 110 111 112 113
        on right: 116 117 122 123 124 125 126 127 128 129 130
    compound_statement (149)
        on left: 114 115
        on right: 9 36 37 56 57 107 120 121
    statement_list (150)
        on left: 116 117
        on right: 115 117
    expression_statement (151)
        on left: 118 119
        on right: 108 127 128 129 130 133
    selection_statement (152)
        on left: 120 121 122
        on right: 109
    labeled_statement (153)
        on left: 123 124 125
        on right: 106
    iteration_statement (154)
        on left: 126 127 128 129 130
        on right: 110
    jump_statement (155)
        on left: 131 132 133
        on right: 111
    inbuilt_function_call (156)
        on left: 134 135 136 137
        on right: 71
    inbuilt_function (157)
        on left: 138 139 140 141 142 143 144 145 146
        on right: 134 135
    inbuilt_member_function (158)
        on left: 147 148
        on right: 136 137
    inbuilt_get_function (159)
        on left: 149 150 151 152 153 154 155 156 157 158 159
        on right: 147
    inbuilt_set_function (160)
        on left: 160 161 162 163 164 165 166 167 168 169 170 171 172
        on right: 148


State 0

    0 $accept: . program $end

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    CONST      shift, and go to state 6
    VAR        shift, and go to state 7
    FAMILY     shift, and go to state 8
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16
    DRIVER     shift, and go to state 17

    $default  reduce using rule 1 (program)

    program               go to state 18
    translation_unit      go to state 19
    external_declaration  go to state 20
    driver_definition     go to state 21
    type                  go to state 22
    variable_declaration  go to state 23
    function_definition   go to state 24
    class_declaration     go to state 25


State 1

   10 type: INT .

    $default  reduce using rule 10 (type)


State 2

   11 type: FLOAT .

    $default  reduce using rule 11 (type)


State 3

   12 type: STRING .

    $default  reduce using rule 12 (type)


State 4

   13 type: BOOL .

    $default  reduce using rule 13 (type)


State 5

   14 type: VOID .

    $default  reduce using rule 14 (type)


State 6

   29 variable_declaration: CONST . type variable_list ';'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16

    type  go to state 26


State 7

   28 variable_declaration: VAR . type variable_list ';'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16

    type  go to state 27


State 8

   42 class_declaration: FAMILY . IDENTIFIER class_definition ';'
   43                  | FAMILY . IDENTIFIER INHERITS IDENTIFIER class_definition ';'
   44                  | FAMILY . IDENTIFIER INHERITS access_specifier class_definition ';'

    IDENTIFIER  shift, and go to state 28


State 9

   15 type: POINT .

    $default  reduce using rule 15 (type)


State 10

   16 type: IMAGE .

    $default  reduce using rule 16 (type)


State 11

   17 type: RECTANGLE .

    $default  reduce using rule 17 (type)


State 12

   18 type: CIRCLE .

    $default  reduce using rule 18 (type)


State 13

   19 type: ELLIPSE .

    $default  reduce using rule 19 (type)


State 14

   20 type: POLYGON .

    $default  reduce using rule 20 (type)


State 15

   21 type: CURVE .

    $default  reduce using rule 21 (type)


State 16

   22 type: PATH .

    $default  reduce using rule 22 (type)


State 17

    9 driver_definition: DRIVER . '(' ')' compound_statement

    '('  shift, and go to state 29


State 18

    0 $accept: program . $end

    $end  shift, and go to state 30


State 19

    2 program: translation_unit .
    4 translation_unit: translation_unit . external_declaration

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    VOID       shift, and go to state 5
    CONST      shift, and go to state 6
    VAR        shift, and go to state 7
    FAMILY     shift, and go to state 8
    POINT      shift, and go to state 9
    IMAGE      shift, and go to state 10
    RECTANGLE  shift, and go to state 11
    CIRCLE     shift, and go to state 12
    ELLIPSE    shift, and go to state 13
    POLYGON    shift, and go to state 14
    CURVE      shift, and go to state 15
    PATH       shift, and go to state 16
    DRIVER     shift, and go to state 17

    $default  reduce using rule 2 (program)

    external_declaration  go to state 31
    driver_definition     go to state 21
    type                  go to state 22
    variable_declaration  go to state 23
    function_definition   go to state 24
    class_declaration     go to state 25


State 20

    3 translation_unit: external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 21

    5 external_declaration: driver_definition .

    $default  reduce using rule 5 (external_declaration)


State 22

   36 function_definition: type . IDENTIFIER '(' args_list ')' compound_statement
   37                    | type . IDENTIFIER '(' ')' compound_statement

    IDENTIFIER  shift, and go to state 32


State 23

    7 external_declaration: variable_declaration .

    $default  reduce using rule 7 (external_declaration)


State 24

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


State 25

    8 external_declaration: class_declaration .

    $default  reduce using rule 8 (external_declaration)


State 26

   29 variable_declaration: CONST type . variable_list ';'

    IDENTIFIER  shift, and go to state 33

    variable_list  go to state 34
    variable       go to state 35


State 27

   28 variable_declaration: VAR type . variable_list ';'

    IDENTIFIER  shift, and go to state 33

    variable_list  go to state 36
    variable       go to state 35


State 28

   42 class_declaration: FAMILY IDENTIFIER . class_definition ';'
   43                  | FAMILY IDENTIFIER . INHERITS IDENTIFIER class_definition ';'
   44                  | FAMILY IDENTIFIER . INHERITS access_specifier class_definition ';'

    INHERITS  shift, and go to state 37
    '{'       shift, and go to state 38

    class_definition  go to state 39


State 29

    9 driver_definition: DRIVER '(' . ')' compound_statement

    ')'  shift, and go to state 40


State 30

    0 $accept: program $end .

    $default  accept


State 31

    4 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 4 (translation_unit)


State 32

   36 function_definition: type IDENTIFIER . '(' args_list ')' compound_statement
   37                    | type IDENTIFIER . '(' ')' compound_statement

    '('  shift, and go to state 41


State 33

   34 variable: IDENTIFIER . ';'
   35         | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 42
    ';'     shift, and go to state 43


State 34

   29 variable_declaration: CONST type variable_list . ';'
   33 variable_list: variable_list . ',' variable

    ';'  shift, and go to state 44
    ','  shift, and go to state 45


State 35

   32 variable_list: variable .

    $default  reduce using rule 32 (variable_list)


State 36

   28 variable_declaration: VAR type variable_list . ';'
   33 variable_list: variable_list . ',' variable

    ';'  shift, and go to state 46
    ','  shift, and go to state 45


State 37

   43 class_declaration: FAMILY IDENTIFIER INHERITS . IDENTIFIER class_definition ';'
   44                  | FAMILY IDENTIFIER INHERITS . access_specifier class_definition ';'

    IDENTIFIER  shift, and go to state 47
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49

    access_specifier  go to state 50


State 38

   47 class_definition: '{' . '}'
   48                 | '{' . class_members '}'

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16
    '}'         shift, and go to state 52

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    access_specifier         go to state 55
    class_members            go to state 56
    class_member             go to state 57
    constructor_declaration  go to state 58


State 39

   42 class_declaration: FAMILY IDENTIFIER class_definition . ';'

    ';'  shift, and go to state 59


State 40

    9 driver_definition: DRIVER '(' ')' . compound_statement

    '{'  shift, and go to state 60

    compound_statement  go to state 61


State 41

   36 function_definition: type IDENTIFIER '(' . args_list ')' compound_statement
   37                    | type IDENTIFIER '(' . ')' compound_statement

    CONST  shift, and go to state 62
    VAR    shift, and go to state 63
    ')'    shift, and go to state 64

    args_list  go to state 65
    arg        go to state 66


State 42

   35 variable: IDENTIFIER ASSIGN . expression

    IDENTIFIER           shift, and go to state 67
    INTEGER_LITERAL      shift, and go to state 68
    FLOAT_LITERAL        shift, and go to state 69
    STRING_LITERAL       shift, and go to state 70
    BOOL_LITERAL         shift, and go to state 71
    PI                   shift, and go to state 72
    LOGICAL_NOT          shift, and go to state 73
    CLEAR                shift, and go to state 74
    DRAW                 shift, and go to state 75
    PRINT                shift, and go to state 76
    FLOOR                shift, and go to state 77
    CEIL                 shift, and go to state 78
    TO_FLOAT             shift, and go to state 79
    ADD_POINT            shift, and go to state 80
    MAKE_POINT           shift, and go to state 81
    GET_X                shift, and go to state 82
    GET_Y                shift, and go to state 83
    GET_POINTS           shift, and go to state 84
    GET_WIDTH            shift, and go to state 85
    GET_CENTER           shift, and go to state 86
    GET_SIDES            shift, and go to state 87
    GET_SIDE_LENGTH      shift, and go to state 88
    GET_ROTATION         shift, and go to state 89
    GET_RADIUS           shift, and go to state 90
    GET_COLOUR           shift, and go to state 91
    GET_BORDER_COLOUR    shift, and go to state 92
    SET_X                shift, and go to state 93
    SET_Y                shift, and go to state 94
    SET_POINTS           shift, and go to state 95
    SET_WIDTH            shift, and go to state 96
    SET_LENGTH           shift, and go to state 97
    SET_CENTER           shift, and go to state 98
    SET_SIDES            shift, and go to state 99
    SET_SIDE_LENGTH      shift, and go to state 100
    SET_ROTATION         shift, and go to state 101
    SET_RADIUS           shift, and go to state 102
    SET_COLOUR           shift, and go to state 103
    SET_BORDER_COLOUR    shift, and go to state 104
    SET_DIMENSION        shift, and go to state 105
    GET_COLOUR_FROM_RGB  shift, and go to state 106
    '('                  shift, and go to state 107

    literal                    go to state 108
    primary_expression         go to state 109
    unary_expression           go to state 110
    multiplicative_expression  go to state 111
    additive_expression        go to state 112
    relational_expression      go to state 113
    equality_expression        go to state 114
    logical_not_expression     go to state 115
    logical_and_expression     go to state 116
    logical_or_expression      go to state 117
    conditional_expression     go to state 118
    assignment_expression      go to state 119
    expression                 go to state 120
    inbuilt_function_call      go to state 121
    inbuilt_function           go to state 122
    inbuilt_member_function    go to state 123
    inbuilt_get_function       go to state 124
    inbuilt_set_function       go to state 125


State 43

   34 variable: IDENTIFIER ';' .

    $default  reduce using rule 34 (variable)


State 44

   29 variable_declaration: CONST type variable_list ';' .

    $default  reduce using rule 29 (variable_declaration)


State 45

   33 variable_list: variable_list ',' . variable

    IDENTIFIER  shift, and go to state 33

    variable  go to state 126


State 46

   28 variable_declaration: VAR type variable_list ';' .

    $default  reduce using rule 28 (variable_declaration)


State 47

   43 class_declaration: FAMILY IDENTIFIER INHERITS IDENTIFIER . class_definition ';'

    '{'  shift, and go to state 38

    class_definition  go to state 127


State 48

   45 access_specifier: PUBLIC .

    $default  reduce using rule 45 (access_specifier)


State 49

   46 access_specifier: PRIVATE .

    $default  reduce using rule 46 (access_specifier)


State 50

   44 class_declaration: FAMILY IDENTIFIER INHERITS access_specifier . class_definition ';'

    '{'  shift, and go to state 38

    class_definition  go to state 128


State 51

   56 constructor_declaration: IDENTIFIER . '(' ')' compound_statement
   57                        | IDENTIFIER . '(' args_list ')' compound_statement

    '('  shift, and go to state 129


State 52

   47 class_definition: '{' '}' .

    $default  reduce using rule 47 (class_definition)


State 53

   53 class_member: variable_declaration .

    $default  reduce using rule 53 (class_member)


State 54

   54 class_member: function_definition .

    $default  reduce using rule 54 (class_member)


State 55

   51 class_members: access_specifier . class_member

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    class_member             go to state 130
    constructor_declaration  go to state 58


State 56

   48 class_definition: '{' class_members . '}'
   49 class_members: class_members . access_specifier class_member
   50              | class_members . class_member

    IDENTIFIER  shift, and go to state 51
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    VOID        shift, and go to state 5
    CONST       shift, and go to state 6
    VAR         shift, and go to state 7
    PUBLIC      shift, and go to state 48
    PRIVATE     shift, and go to state 49
    POINT       shift, and go to state 9
    IMAGE       shift, and go to state 10
    RECTANGLE   shift, and go to state 11
    CIRCLE      shift, and go to state 12
    ELLIPSE     shift, and go to state 13
    POLYGON     shift, and go to state 14
    CURVE       shift, and go to state 15
    PATH        shift, and go to state 16
    '}'         shift, and go to state 131

    type                     go to state 22
    variable_declaration     go to state 53
    function_definition      go to state 54
    access_specifier         go to state 132
    class_member             go to state 133
    constructor_declaration  go to state 58


State 57

   52 class_members: class_member .

    $default  reduce using rule 52 (class_members)


State 58

   55 class_member: constructor_declaration .

    $default  reduce using rule 55 (class_member)


State 59

   42 class_declaration: FAMILY IDENTIFIER class_definition ';' .

    $default  reduce using rule 42 (class_declaration)


State 60

  114 compound_statement: '{' . '}'
  115                   | '{' . statement_list '}'

    IDENTIFIER           shift, and go to state 134
    INTEGER_LITERAL      shift, and go to state 68
    FLOAT_LITERAL        shift, and go to state 69
    STRING_LITERAL       shift, and go to state 70
    BOOL_LITERAL         shift, and go to state 71
    PI                   shift, and go to state 72
    CONST                shift, and go to state 6
    VAR                  shift, and go to state 135
    LOGICAL_NOT          shift, and go to state 73
    IF                   shift, and go to state 136
    FOR                  shift, and go to state 137
    WHILE                shift, and go to state 138
    SWITCH               shift, and go to state 139
    CASE                 shift, and go to state 140
    DEFAULT              shift, and go to state 141
    BREAK                shift, and go to state 142
    CONTINUE             shift, and go to state 143
    SEND                 shift, and go to state 144
    CLEAR                shift, and go to state 74
    DRAW                 shift, and go to state 75
    PRINT                shift, and go to state 76
    FLOOR                shift, and go to state 77
    CEIL                 shift, and go to state 78
    TO_FLOAT             shift, and go to state 79
    ADD_POINT            shift, and go to state 80
    MAKE_POINT           shift, and go to state 81
    GET_X                shift, and go to state 82
    GET_Y                shift, and go to state 83
    GET_POINTS           shift, and go to state 84
    GET_WIDTH            shift, and go to state 85
    GET_CENTER           shift, and go to state 86
    GET_SIDES            shift, and go to state 87
    GET_SIDE_LENGTH      shift, and go to state 88
    GET_ROTATION         shift, and go to state 89
    GET_RADIUS           shift, and go to state 90
    GET_COLOUR           shift, and go to state 91
    GET_BORDER_COLOUR    shift, and go to state 92
    SET_X                shift, and go to state 93
    SET_Y                shift, and go to state 94
    SET_POINTS           shift, and go to state 95
    SET_WIDTH            shift, and go to state 96
    SET_LENGTH           shift, and go to state 97
    SET_CENTER           shift, and go to state 98
    SET_SIDES            shift, and go to state 99
    SET_SIDE_LENGTH      shift, and go to state 100
    SET_ROTATION         shift, and go to state 101
    SET_RADIUS           shift, and go to state 102
    SET_COLOUR           shift, and go to state 103
    SET_BORDER_COLOUR    shift, and go to state 104
    SET_DIMENSION        shift, and go to state 105
    GET_COLOUR_FROM_RGB  shift, and go to state 106
    '('                  shift, and go to state 107
    ';'                  shift, and go to state 145
    '{'                  shift, and go to state 60
    '}'                  shift, and go to state 146

    literal                    go to state 108
    variable_declaration       go to state 147
    variable_declaration_list  go to state 148
    object_declaration         go to state 149
    primary_expression         go to state 109
    unary_expression           go to state 110
    multiplicative_expression  go to state 111
    additive_expression        go to state 112
    relational_expression      go to state 113
    equality_expression        go to state 114
    logical_not_expression     go to state 115
    logical_and_expression     go to state 116
    logical_or_expression      go to state 117
    conditional_expression     go to state 118
    assignment_expression      go to state 119
    expression                 go to state 150
    statement                  go to state 151
    compound_statement         go to state 152
    statement_list             go to state 153
    expression_statement       go to state 154
    selection_statement        go to state 155
    labeled_statement          go to state 156
    iteration_statement        go to state 157
    jump_statement             go to state 158
    inbuilt_function_call      go to state 121
    inbuilt_function           go to state 122
    inbuilt_member_function    go to state 123
    inbuilt_get_function       go to state 124
    inbuilt_set_function       go to state 125


State 61

    9 driver_definition: DRIVER '(' ')' compound_statement .

    $default  reduce using rule 9 (driver_definition)


State 62

   41 arg: CONST . type IDENTIFIER
